src/test/ui/span/E0493.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/E0493.rs:17:17
   |
LL | const F : Foo = (Foo { a : 0 }, Foo { a : 1 }).1;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constants cannot evaluate destructors

error: aborting due to previous error

